--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
         <h2>Settings</h2>
         <div id='paste-expiration-panel' class='paste-setting-subitem-panel'>
             <input list='expiration-choices' type='text' min='60' step='1' name='paste-expiration'
-                   id='paste-expiration-input' placeholder='Expiration (secs)' value='7d'>
+                   id='paste-expiration-input' placeholder='Expiration (secs)' value='7M'>
             <label class='small-label' for='paste-expiration-input'>Delete your paste after a period of time (leave blank for no expiry). <br>Units: s (seconds), m (minutes), h (hours), d (days), M (months), Y (years)</label>
         </div>
         <div id='paste-passwd-panel' class='paste-setting-subitem-panel'>
