--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <html lang='en'>
 <body>
 <div class='px-3 my-5 markdown-body'>
-    <a href='index.html'></a><h1>Yet Another Pastebin</h1></a>
+    <a href='index.html'><h1>Yet Another Pastebin</h1></a>
     <p>Refer to <a href='{{REPO}}'>GitHub</a> for more details.</p>
 
     <div id='paste-input-panel'>
