--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,11 @@
 </head>
 <html lang='zh-CN'>
 <body>
-<div class='px-3 my-5 markdown-body'>
+<div class='px-3 my-2 markdown-body'>
     <a href='index.html'><h1>在线剪切板</h1></a>
     <p>更多信息见 <a href='{{REPO}}'>GitHub</a>。</p>
 
+    <div id='main-panels' class='panels'>
     <div id='paste-input-panel'>
         <div id='paste-header'>
             <div class='paste-header-tabs'>
@@ -36,7 +37,7 @@
     </div>
 
     <div id='paste-setting-panel'>
-        <h2>设置</h2>
+        <h3>设置</h3>
         <div id='paste-expiration-panel' class='paste-setting-subitem-panel'>
             <input list='expiration-choices' type='text' min='60' step='1' name='paste-expiration'
                    id='paste-expiration-input' placeholder='过期时间（秒）' value='7M'>
@@ -48,7 +49,7 @@
         </div>
         <div id='paste-passwd-panel' class='paste-setting-subitem-panel'>
             <input type='text' spellcheck='false' name='paste-expiration' id='paste-passwd-input' placeholder='管理密码'>
-            <label class='small-label' for='paste-passwd-input'>编辑密码：用于删除/更新粘贴。不填则随机生成。</label>
+            <label class='small-label' for='paste-passwd-input'>管理密码：用于删除/更新页面。不填则随机生成。</label>
         </div>
         <div class='label-line'>
             <input type='radio' name='url-type' value='short' id='paste-url-short-radio' checked>
@@ -75,6 +76,7 @@
             <input type='url' spellcheck='false' id='paste-admin-url-input'
                    name='admin-url' value='{{BASE_URL}}'>
         </div>
+    </div>
     </div>
     <div id='paste-uploaded-panel' class='hidden'>
         <h2>上传结果</h2>
