--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,6 +100,11 @@
             </div>
             <label for='suggest-url' class='small-label'>编辑链接</label>
             <div class='uploaded-entry'>
+                <input id='uploaded-admin-url-with-v' type='text' class='uploaded-table-text' readonly>
+                <button class='copy-button'>复制</button>
+            </div>
+            <label for='uploaded-admin-url-with-v' class='small-label'>编辑链接（含 ?v= 查看密码）</label>
+            <div class='uploaded-entry'>
                 <input type='text' id='uploaded-expiration' class='uploaded-table-text' readonly>
             </div>
             <label for='uploaded-expiration' class='small-label'>过期时间（秒）</label>
