--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
     <link rel='icon' href='{{FAVICON}}' type='image/png' />
     <style media='screen'>
-        {
-                {
-                CSS
-            }
-        }
+        {{CSS}}
     </style>
 </head>
 <html lang='zh-CN'>
@@ -100,16 +96,7 @@
                     <button class='copy-button'>复制</button>
                 </div>
                 <label for='suggest-url' class='small-label'>管理链接 (可编辑/删除/设置)</label>
-                <div class='uploaded-entry'>
-                    <input id='uploaded-url-with-v' type='text' class='uploaded-table-text' readonly>
-                    <button class='copy-button'>复制</button>
-                </div>
-                <label for='uploaded-url-with-v' class='small-label'>带密链接 (自动填入密码)</label>
-                <div class='uploaded-entry'>
-                    <input id='uploaded-admin-url-with-v' type='text' class='uploaded-table-text' readonly>
-                    <button class='copy-button'>复制</button>
-                </div>
-                <label for='uploaded-admin-url-with-v' class='small-label'>带密管理链接</label>
+
                 <div class='uploaded-entry'>
                     <input type='text' id='uploaded-expiration' class='uploaded-table-text' readonly>
                 </div>
